fixed spinner visibility

--- a/app/site_base/static/site_base/style.css
+++ b/app/site_base/static/site_base/style.css
@@ -22,8 +22,3 @@ a.subtle {
 .htmx-indicator{opacity:0}
 .htmx-request .htmx-indicator{opacity:1; transition: opacity 200ms ease-in;}
 .htmx-request.htmx-indicator{opacity:1; transition: opacity 200ms ease-in;}
-
-img.loading-spinner {
-    width: 40px;
-    height: auto;
-}
